correcion sobre:
CategoriaController, DetalleVentaController, IndicadorInventarioBusinessLogic, IndicadorInventarioController, IndicadorInventarioDTOAssembler, IndicadorInventarioFacade, IndicadorInventarioImp, IndicadorInventarioImpl, pom.xml